# bgi2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: grill.cc  hello_world.cc  interactive.cc  simple.cc
include/: bgi2.h
src/: bgi2.cc  bgi2_test.cc
